# internal/docs/swagger/swagger.json
@@ -10,193 +10,7 @@
     "host": "{{.Host}}",
     "basePath": "{{.BasePath}}",
     "paths": {
-        "/ads": {
-            "get": {
-                "description": "Метод возвращает данные о всех рекламных объявлениях",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Advertisements"
-                ],
-                "summary": "Получить вообще все рекламные объявления",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/responses.AllAdvertisements"
-                        }
-                    },
-                    "422": {}
-                }
-            },
-            "post": {
-                "description": "Метод добавляет новое рекламне объявление с заданными параметрами",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Advertisements"
-                ],
-                "summary": "Добавить рекламное объявление",
-                "parameters": [
-                    {
-                        "description": "Данные о рекламном объявлении",
-                        "name": "advertisement",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/entities.Advertisement"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/responses.OneAdvertisement"
-                        }
-                    },
-                    "422": {}
-                }
-            }
-        },
-        "/ads/{id}": {
-            "get": {
-                "description": "Метод возвращает данные рекламном объявлении с данным ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Advertisements"
-                ],
-                "summary": "Получить рекламное объявление по ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID рекламного объявления",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/responses.OneAdvertisement"
-                        }
-                    },
-                    "404": {},
-                    "422": {}
-                }
-            },
-            "put": {
-                "description": "Метод обновляет рекламне объявление с заданным ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Advertisements"
-                ],
-                "summary": "Обновить рекламное объявление",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID рекламного объявления",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Новые данные о рекламном объявлении",
-                        "name": "advertisement",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/entities.Advertisement"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/responses.OneAdvertisement"
-                        }
-                    },
-                    "404": {},
-                    "422": {}
-                }
-            },
-            "delete": {
-                "description": "Метод удаляет рекламне объявление с заданным ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Advertisements"
-                ],
-                "summary": "Удалить рекламное объявление",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID рекламного объявления",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {},
-                    "422": {}
-                }
-            }
-        },
-        "/advertiser/{id}/ads": {
-            "get": {
-                "description": "Метод возвращает данные о рекламных объявлениях рекламодателя с заданным ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Advertisements"
-                ],
-                "summary": "Получить рекламные объявления рекламодателя",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID рекламодателя",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/responses.AllAdvertisements"
-                        }
-                    },
-                    "422": {}
-                }
-            }
-        },
-        "/advertisers": {
+        "/partners": {
             "get": {
                 "description": "Метод возвращает список всех имеющихся в системе рекламодателей",
                 "produces": [
@@ -252,7 +66,7 @@
                 }
             }
         },
-        "/advertisers/{id}": {
+        "/partners/{id}": {
             "get": {
                 "description": "Метод возвращает рекламодателя по его ID",
                 "produces": [
@@ -341,6 +155,192 @@
                     {
                         "type": "integer",
                         "description": "ID рекламодателя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {},
+                    "422": {}
+                }
+            }
+        },
+        "/partners/{id}/promotions": {
+            "get": {
+                "description": "Метод возвращает данные о рекламных объявлениях рекламодателя с заданным ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Получить рекламные объявления рекламодателя",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID рекламодателя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/responses.AllAdvertisements"
+                        }
+                    },
+                    "422": {}
+                }
+            }
+        },
+        "/promotions": {
+            "get": {
+                "description": "Метод возвращает данные о всех рекламных объявлениях",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Получить вообще все рекламные объявления",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/responses.AllAdvertisements"
+                        }
+                    },
+                    "422": {}
+                }
+            },
+            "post": {
+                "description": "Метод добавляет новое рекламне объявление с заданными параметрами",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Добавить рекламное объявление",
+                "parameters": [
+                    {
+                        "description": "Данные о рекламном объявлении",
+                        "name": "advertisement",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/entities.Advertisement"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/responses.OneAdvertisement"
+                        }
+                    },
+                    "422": {}
+                }
+            }
+        },
+        "/promotions/{id}": {
+            "get": {
+                "description": "Метод возвращает данные рекламном объявлении с данным ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Получить рекламное объявление по ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID рекламного объявления",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/responses.OneAdvertisement"
+                        }
+                    },
+                    "404": {},
+                    "422": {}
+                }
+            },
+            "put": {
+                "description": "Метод обновляет рекламне объявление с заданным ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Обновить рекламное объявление",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID рекламного объявления",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Новые данные о рекламном объявлении",
+                        "name": "advertisement",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/entities.Advertisement"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/responses.OneAdvertisement"
+                        }
+                    },
+                    "404": {},
+                    "422": {}
+                }
+            },
+            "delete": {
+                "description": "Метод удаляет рекламне объявление с заданным ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Удалить рекламное объявление",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID рекламного объявления",
                         "name": "id",
                         "in": "path",
                         "required": true
